2008-10-20  Xavier Queralt Mateu <xquearlt@flumotion.com>

	reviewed by: Johan Dahlin  <johan@flumotion.com>

	* data/glade/connection-dialog.glade:
	* data/glade/greeter-load_connection.glade:
	* flumotion/admin/gtk/connections.py:
	* flumotion/admin/gtk/greeter.py:
	Disables the connect button when the recent 
	connections list is cleared.
	Fixes #1051

2008-10-20  Xavier Queralt  <xqueralt@flumotion.com>

	reviewed by: Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/admin.py:
	* flumotion/admin/gtk/adminwindow.py:
	Free the old connection when switching managers.
	Fixes #758

2008-10-15  Jan Urbanski  <jurbanski@flumotion.com>

	* common/Makefile.am:
	Add flumotion-trial to EXTRA_DIST in common/Makefile.am.

2008-10-15  Pedro Gracia  <pedro@flumotion.com>

	* flumotion/monitor/nagios/stream.py:
	Fixed an error that makes this script fail with playlists.

2008-10-15  Pedro Gracia  <pedro@flumotion.com>

	* po/es.po:
	Update Spanish translation.

2008-10-14  Jan Urbanski  <jurbanski@flumotion.com>

	* Makefile.am:
	Temporarily add misc/flumotion-trial to CLEANFILES, because
	flumotion-trial.in has been moved from misc/ to common/ which might
	have left a stale generated file in old trees.

2008-10-14  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/common/testsuite.py:
	Set the skip attribute on the testcase class instead of setting it on
	the instance. This is a workaround for Twisted 2.0.1.
	svn:ignore flu-saved-coverage.pickle

2008-10-14  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/common/testsuite.py:
	Add more workarounds for ancient Twisted versions.

	* flumotion/test/test_comptest.py:
	Define an empty runTest method in the dummy TestCase so trial won't
	complain when it will try to instantiate it.

2008-10-13  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/test/test_comptest.py:
	Work around broken Twisted < 2.5.0 trial, which has None as the default
	argument for TestCase.__init__
